[package]
name = "fapi-diff"
version = "0.10.0"
authors = ["fgardt <me@fgardt.dev>"]
edition = "2021"
description = "A tool to diff 2 versions of Factorios API documentation."

[profile.release]
strip = true
lto = "thin"

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
nursery = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
unwrap_used = "warn"
expect_used = "warn"

missing_panics_doc = "allow"
missing_errors_doc = "allow"

module_name_repetitions = "allow"

cast_possible_truncation = "allow"
cast_precision_loss = "allow"
cast_sign_loss = "allow"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["cargo", "derive"] }
reqwest = { version = "0.12", features = [
    "rustls-tls",
    "blocking",
], default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
structdiff = { version = "0.7", features = ["serde", "rustc_hash"] }
