[package]
name = "fapi-diff"
version = "0.11.0"
authors = ["fgardt <me@fgardt.dev>"]
edition = "2021"
description = "A tool to diff 2 versions of Factorios API documentation."

[profile.release]
strip = true
lto = "thin"

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
nursery = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
unwrap_used = "warn"
expect_used = "warn"

missing_panics_doc = "allow"
missing_errors_doc = "allow"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = { version = "1.0", optional = true }
clap = { version = "4.5", features = ["cargo", "derive"], optional = true }
reqwest = { version = "0.12", features = [
    "rustls-tls",
    "blocking",
], default-features = false, optional = true }
structdiff = { version = "0.7", features = [
    "serde",
    "rustc_hash",
], optional = true }

[features]
default = ["diff"]
diff = [
    "non_type_info",
    "dep:structdiff",
    "dep:anyhow",
    "dep:clap",
    "dep:reqwest",
]
non_type_info = []
